src/objects/ProductStock__c.object
<CustomObject>
    <fields>
        <fullName>InitQtyOfStock__c</fullName>
        <inlineHelpText>棚卸し後の繰越在庫値情報を格納する</inlineHelpText>
        <label>繰越在庫</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LogicQtyOfStock__c</fullName>
        <formula>NULLVALUE(PurchaseSummary__c ,0) + NULLVALUE(InitQtyOfStock__c ,0) - NULLVALUE(ProductOutStock__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>棚卸後の前月繰越＋締切日後の入庫数-締切日後の出庫数</inlineHelpText>
        <label>在庫数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductOutStock__c</fullName>
        <label>商品出庫数(理論）</label>
        <summarizedField>ProductOutStock__c.ProductNumber__c</summarizedField>
        <summaryFilterItems>
            <field>ProductOutStock__c.IsNotTarget__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ProductOutStock__c.ProductStock__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProductRef__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>商品在庫情報</relationshipLabel>
        <relationshipName>StockProductRef</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductSfId__c</fullName>
        <externalId>true</externalId>
        <label>会計商品ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PurchaseSummary__c</fullName>
        <label>商品入庫数(理論）</label>
        <summarizedField>PurchaseDetail__c.ProductNumber__c</summarizedField>
        <summaryFilterItems>
            <field>PurchaseDetail__c.IsNotTarget__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PurchaseDetail__c.ProductStockRef__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReasonableStock__c</fullName>
        <formula>ProductRef__r.ReasonableStock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>適正在庫</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StockAmount__c</fullName>
        <formula>NULLVALUE (ProductRef__r.SalesnoneTax__c , 0) * LogicQtyOfStock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>在庫金額（税抜）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>商品在庫情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{000000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>